[package]
name = "turul-mcp-builders"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runtime builders for MCP (Model Context Protocol) components"
keywords = ["mcp", "protocol", "builders", "runtime"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# Protocol alias for current version
turul-mcp-protocol = { path = "../turul-mcp-protocol", version = "0.1.0" }
turul-mcp-json-rpc-server = { path = "../turul-mcp-json-rpc-server", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
