[package]
name = "turul-mcp-client"
version = "0.2.1"
edition = "2024"
description = "Comprehensive MCP client library with multi-transport support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aussierobots/turul-mcp-framework"

[dependencies]
# MCP framework dependencies
turul-mcp-protocol = { path = "../turul-mcp-protocol", version = "0.2.1" }
turul-mcp-protocol-2025-06-18 = { path = "../turul-mcp-protocol-2025-06-18", version = "0.2.1" }
turul-mcp-json-rpc-server = { path = "../turul-mcp-json-rpc-server", version = "0.2.1" }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json", "stream"] }
hyper = { workspace = true }

# JSON handling
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
url = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }

# Optional features for different transports
tokio-tungstenite = { version = "0.27", optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[features]
default = ["http", "sse"]
# Transport features
http = []
sse = ["tokio-util"]
websocket = ["tokio-tungstenite"]
stdio = ["tokio-util"]
# All transports
all-transports = ["http", "sse", "websocket", "stdio"]

[dev-dependencies]
tokio-test = { workspace = true }
