[package]
name = "turul-mcp-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the MCP framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait.workspace = true

# Internal dependencies
turul-mcp-protocol = { path = "../turul-mcp-protocol", version = "0.1.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
async-trait.workspace = true
tracing-test = "0.2"
turul-mcp-server = { path = "../turul-mcp-server", version = "0.1.0" }