[package]
name = "turul-mcp-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the MCP framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
async-trait.workspace = true

# Internal dependencies
turul-mcp-protocol.workspace = true
turul-mcp-protocol-2025-06-18.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
async-trait.workspace = true
tracing-test = { workspace = true }
turul-mcp-server = { workspace = true }
