[package]
name = "turul-mcp-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for the MCP framework"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
regex = { workspace = true }
async-trait.workspace = true

# Internal dependencies
turul-mcp-protocol.workspace = true
schemars.workspace = true

[dev-dependencies]
# Integration tests (comprehensive_tool_tests, schemars_integration_test) moved to
# workspace root tests/ crate — eliminates 2 heavy test binaries from this crate.
# Dev-deps retained for doctests and inline unit tests only.
tokio = { workspace = true, features = ["test-util"] }
async-trait.workspace = true
tracing-test = { workspace = true }
turul-mcp-server = { workspace = true }
turul-mcp-builders = { workspace = true }

