[package]
name = "turul-mcp-json-rpc-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Pure JSON-RPC 2.0 server implementation with type-safe domain/protocol separation"

[features]
default = ["async"]
async = ["async-trait", "futures"]
streams = ["async", "futures"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
