[package]
name = "turul-mcp-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth 2.1 Resource Server support for Turul MCP framework"

[dependencies]
turul-http-mcp-server = { version = "0.3.9", path = "../turul-http-mcp-server" }
turul-mcp-session-storage = { version = "0.3.9", path = "../turul-mcp-session-storage", default-features = false }

async-trait = "0.1"
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
url = { workspace = true }

[dev-dependencies]
chrono = "0.4"
rand = "0.8"
rsa = "0.9"
tokio = { version = "1", features = ["full"] }
