[package]
name = "turul-mcp-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth 2.1 Resource Server support for Turul MCP framework"

[dependencies]
turul-http-mcp-server.workspace = true
turul-mcp-session-storage.workspace = true

async-trait.workspace = true
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "http2"] }
jsonwebtoken.workspace = true
reqwest = { workspace = true, default-features = false, features = [
  "rustls",
  "json",
] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
chrono.workspace = true
rand.workspace = true
rsa.workspace = true
tokio = { workspace = true, features = ["full"] }
