[package]
name = "turul-mcp-protocol"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) specification implementation - Current version alias"

[features]
default = []
server = ["turul-mcp-protocol-2025-06-18/server"]
client = ["turul-mcp-protocol-2025-06-18/client"]

[dependencies]
turul-mcp-protocol-2025-06-18 = { path = "../turul-mcp-protocol-2025-06-18", version = "0.1.1" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
