[package]
name = "turul-mcp-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) specification implementation - Current version alias"

[features]
default = []
server = ["turul-mcp-protocol-2025-11-25/server"]
client = ["turul-mcp-protocol-2025-11-25/client"]

[dependencies]
turul-mcp-protocol-2025-11-25.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
