[package]
name = "turul-mcp-server"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level framework for building Model Context Protocol (MCP) servers"

[features]
default = ["http", "sse", "sqlite", "postgres", "dynamodb"]
http = ["turul-http-mcp-server"]
sse = ["turul-http-mcp-server/sse"]
postgres = ["turul-mcp-session-storage/postgres"]
sqlite = ["turul-mcp-session-storage/sqlite"]
dynamodb = ["turul-mcp-session-storage/dynamodb"]
test-utils = []

[dependencies]
# Framework dependencies
turul-mcp-json-rpc-server = { path = "../turul-mcp-json-rpc-server", version = "0.2.0" }
turul-mcp-protocol = { path = "../turul-mcp-protocol", version = "0.2.0" }
turul-mcp-protocol-2025-06-18 = { path = "../turul-mcp-protocol-2025-06-18", version = "0.2.0" }
turul-mcp-session-storage = { path = "../turul-mcp-session-storage", version = "0.2.0" }
turul-mcp-builders = { path = "../turul-mcp-builders", version = "0.2.0" }
turul-http-mcp-server = { path = "../turul-http-mcp-server", optional = true, version = "0.2.1" }

# Core dependencies
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
once_cell = "1.19"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
turul-mcp-builders = { path = "../turul-mcp-builders", version = "0.2.0" }
