[package]
name = "turul-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level framework for building Model Context Protocol (MCP) servers"

[features]
default = ["http", "sse"]
http = ["turul-http-mcp-server"]
sse = ["turul-http-mcp-server/sse"]
sqlite = ["turul-mcp-session-storage/sqlite", "turul-mcp-task-storage/sqlite", "turul-mcp-server-state-storage?/sqlite"]
postgres = ["turul-mcp-session-storage/postgres", "turul-mcp-task-storage/postgres", "turul-mcp-server-state-storage?/postgres"]
dynamodb = ["turul-mcp-session-storage/dynamodb", "turul-mcp-task-storage/dynamodb", "turul-mcp-server-state-storage?/dynamodb"]
dynamic-tools = ["turul-mcp-server-state-storage"]
test-utils = []

[dependencies]
# Framework dependencies
turul-mcp-json-rpc-server.workspace = true
turul-mcp-protocol.workspace = true
turul-mcp-session-storage.workspace = true
turul-mcp-builders.workspace = true
turul-mcp-task-storage.workspace = true
turul-http-mcp-server = {workspace = true, optional = true}
turul-mcp-server-state-storage = {workspace = true, optional = true}

# Runtime utilities for task cancellation
tokio-util = { workspace = true }

# Core dependencies
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true, features = ["serde"] }
regex.workspace = true
once_cell.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
turul-mcp-builders.workspace = true
