[package]
name = "turul-mcp-session-storage"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Session storage abstractions for Model Context Protocol (MCP) servers"

[dependencies]
# Core dependencies
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
chrono = { workspace = true, features = ["serde"] }

# Protocol types
turul-mcp-protocol = { path = "../turul-mcp-protocol", version = "0.2.1" }

# Optional database support
sqlx = { workspace = true, optional = true }

# AWS SDK dependencies
aws-config = { workspace = true, optional = true }
aws-sdk-dynamodb = { workspace = true, optional = true }

[features]
default = ["in-memory"]
in-memory = []
sqlite = ["sqlx"]
postgres = ["sqlx"]
dynamodb = ["aws-config", "aws-sdk-dynamodb"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
