[package]
name = "alert-system-server"
version.workspace = true
edition.workspace = true

[dependencies]
turul-mcp-server.workspace = true
turul-mcp-protocol.workspace = true
turul-mcp-derive.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true