[package]
name = "audit-trail-server"
version.workspace = true
edition.workspace = true

[dependencies]
mcp-server.workspace = true
mcp-protocol.workspace = true
mcp-derive.workspace = true
mcp-session-storage = { workspace = true, features = ["sqlite"] }
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
chrono.workspace = true
sqlx.workspace = true
uuid.workspace = true