[package]
name = "builders-showcase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core MCP dependencies
mcp-builders = { path = "../../crates/mcp-builders" }
mcp-protocol = { path = "../../crates/mcp-protocol" }

# Standard dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# For the example
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v7", "serde"] }