[package]
name = "builders-showcase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core MCP dependencies
turul-mcp-builders = { path = "../../crates/turul-mcp-builders" }
turul-mcp-protocol = { path = "../../crates/turul-mcp-protocol" }

# Standard dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# For the example
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v7", "serde"] }