[package]
name = "builders-showcase"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core MCP dependencies
turul-mcp-builders.workspace = true
turul-mcp-protocol.workspace = true

# Standard dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# For the example
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["v7", "serde"] }
[[bin]]
name = "builders-showcase"
path = "src/main.rs"
test = false
