[package]
name = "calculator-add-function-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example MCP calculator server using function macro (Level 1)"

[dependencies]
turul-mcp-server = { workspace = true }
turul-mcp-protocol = { workspace = true }
turul-mcp-derive = { workspace = true }
turul-mcp-builders = { path = "../../crates/turul-mcp-builders" }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }