[package]
name = "calculator-add-simple-server-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example MCP calculator server using derive macros"

[dependencies]
mcp-server = { workspace = true }
mcp-protocol = { workspace = true }
mcp-derive = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
