[package]
name = "calculator-add-simple-server-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Example MCP calculator server using derive macros"

[dependencies]
turul-mcp-server = { workspace = true }
turul-mcp-protocol = { workspace = true }
turul-mcp-derive = { workspace = true }
turul-mcp-builders = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
schemars = { workspace = true }
