[package]
name = "calculator-add-simple-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"

mcp-server = { path = "../../crates/mcp-server" }
mcp-derive = { path = "../../crates/mcp-derive" }
mcp-protocol = { path = "../../crates/mcp-protocol" }
http-mcp-server = { path = "../../crates/http-mcp-server" }