[package]
name = "client-initialise-server"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["sqlite", "postgres", "dynamodb"]
sqlite = ["turul-mcp-session-storage/sqlite"]
postgres = ["turul-mcp-session-storage/postgres"]
dynamodb = ["turul-mcp-session-storage/dynamodb"]

[dependencies]
turul-mcp-server.workspace = true
turul-mcp-protocol.workspace = true
turul-mcp-session-storage.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true